--- a/secret/ghetto.css
+++ b/secret/ghetto.css
@@ -5,8 +5,9 @@ body {
 }
 .content-wrap {
     margin: 0 auto;
-    max-width: 70rem;
+    max-width: 45rem;
     text-align: center;
+    padding-bottom: 3rem;
 }
 
 img.title {
@@ -21,12 +22,29 @@ img.title {
     margin-left: auto;
     margin-right: auto;
 }
+
 .start {
-    display: block;
-    width: 16%;
-    margin-left:42%;
-    margin-right:42%;
+    display: block !important;
+    width: 20rem;
+    margin: 1rem auto 2rem auto;
     color: #fff !important;
     background-color: #0af !important;
     border: 1px solid #fff !important;
+}
+.card {
+    background-color: #f1f1f1;
+}
+.avaliability {
+    color: #5cb85c
+}
+.material-card {
+  background: #fff;
+  border-radius: 2px;
+  padding: 1rem;
+
+}
+.property-card {
+    margin: 1rem auto;
+
+    width: 40rem;
 }
