fixed image style

--- a/secret/ghetto.css
+++ b/secret/ghetto.css
@@ -34,6 +34,11 @@ img.title {
 .card {
     background-color: #f1f1f1;
 }
+.card-img-top {
+    max-width: 100%;
+    max-height: 40rem;
+}
+
 .avaliability {
     color: #5cb85c
 }
