finished rendering json

--- a/secret/ghetto.css
+++ b/secret/ghetto.css
@@ -1,6 +1,6 @@
 body {
     background-image: url('animated-water.gif');
-    background-size: cover;
+    background-size: repeat;
     padding: 3rem;
 }
 .content-wrap {
@@ -48,8 +48,13 @@ img.title {
   padding: 1rem;
 
 }
+#list-root {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
 .property-card {
-    margin: 1rem auto;
+    margin: 1rem;
 
-    width: 40rem;
+    width: 380px;
 }
